@@ -17,6 +17,16 @@ adjustment=0.1
 # echo "$PWD"
 # echo "$WD"
 
-echo "$(readlink -f "$1")"
+qualimap_path=$(dirname "$(which python)")/qualimap
+
+line=$(awk '{if(NR==47) print $0}' "$qualimap_path")
+
+echo "$line"
+
+grep -qxF '\tjava_options="-Djava.awt.headless=true -Xmx$JAVA_MEM_SIZE -XX:MaxPermSize=1024m"' "$qualimap_path" || sed -i '47s#.*#\tjava_options="-Djava.awt.headless=true -Xmx$JAVA_MEM_SIZE -XX:MaxPermSize=1024m"#' "$qualimap_path"
+
+line=$(awk '{if(NR==47) print $0}' "$qualimap_path")
+
+echo "$line"
 
 exit 0
